feat: install tokio

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,4 +1,4 @@
 [build]
-target = "target.arm-unknown-linux-musleabihf"
+target = "arm-unknown-linux-musleabihf"
 [target.arm-unknown-linux-musleabihf]
-linker = "arm-linux-gnueabihf-ld"
+linker = "arm-unknown-linux-gnueabihf-gcc"
