--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = "0.11.25"
+reqwest = { version="0.11.25", default-features = false, features = ["rustls-tls"] }
 tokio = { version = "1.36.0", features = ["full"] }
 
