--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version="0.11.25", default-features = false, features = ["rustls-tls"] }
+sysinfo = "0.30.7"
 tokio = { version = "1.36.0", features = ["full"] }
 
