--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
-[package]
-name = "stats-reporter"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+  "stats-reporter"
+]
 
-[dependencies]
+[workspace.dependencies]
 reqwest = { version="0.11.25", default-features = false, features = ["rustls-tls"] }
 sysinfo = "0.30.7"
 tokio = { version = "1.36.0", features = ["full"] }
