--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = [
+members = [ "stats-manager",
   "stats-reporter"
 ]
 
@@ -7,4 +7,6 @@ members = [
 reqwest = { version="0.11.25", default-features = false, features = ["rustls-tls"] }
 sysinfo = "0.30.7"
 tokio = { version = "1.36.0", features = ["full"] }
-
+axum = "0.7.4"
+tracing-subscriber = "0.3.18"
+serde = { version="1.0.197", features = ["derive"] }
