--- a/stats-reporter/Cargo.toml
+++ b/stats-reporter/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 tokio.workspace = true
 sysinfo.workspace = true
 reqwest.workspace = true
+serde.workspace = true
+serde_json.workspace = true
