--- a/stats-reporter/Cargo.toml
+++ b/stats-reporter/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 tokio.workspace = true
 sysinfo.workspace = true
-reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+
+reqwest = { version="0.11.25", default-features = false, features = ["rustls-tls", "json"] }
+hostname = "0.3.1"
