--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ axum = "0.7.4"
 tracing-subscriber = "0.3.18"
 serde = { version="1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
