--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ tracing-subscriber = "0.3.18"
 serde = { version="1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 
+[profile.release]
+# 他の設定...
+lto = true
+
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
