--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [target.armv7-unknown-linux-gnueabihf]
-linker = "arm-linux-gnueabihf-gcc"
+linker = "arm-linux-gnueabihf-musl-gcc"
 
 [target.arm-unknown-linux-musleabihf]
 linker = "arm-unknown-linux-gnueabihf-gcc"
