--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -39,6 +39,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: myorg/stats-reporter:latest
+          tags: itta/stats-reporter:latest
           target: stats-reporter
           platforms: ${{ matrix.platform }}
